# chat-serving

./: QD2053_2.json  README.md  c2.csv  c3.csv  chunk_split.csv  docker-compose.yml  file.csv  file.json  loading.ipynb  quydinh.json  retriever.py
api/: celery_config.py  config.py  crud.py  database.py  logging_helper.py  main.py  models.py  pipeline_langchain.py  pyproject.toml  requirements.txt  schemas.py  tasks.py
api/data/: Quy dinh 2053 sua doi (Trinh ky).docx  sotaygiangvien.doc  sotayhv.docx
api/routes/: query_route.py  user_route.py
api/tests/: tests.py
data/: data.json  table.txt  text_clean.py
fe-streamlit/: Dockerfile  app.py  config.yml  pyproject.toml
serving/llama2/: config.pbtxt
serving/llama2/1/: .gitignore
worker/: config.py  main.py  pipeline_langchain.py  requirements-dev.txt
worker/data/: 2.  SO TAY GIANG VIEN (Ban cuoi-in).docx
