[tool.poetry]
name = "fe-streamlit"
version = "0.1.0"
description = ""
authors = ["manhtd98 <manhtd6932@seta-international.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
streamlit = "^1.25.0"
streamlit-authenticator = "^0.2.2"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
